reset games uml

--- a/uml/uml_diagram.tex
+++ b/uml/uml_diagram.tex
@@ -158,7 +158,8 @@
 	+ startGame() : <slot> : void \\
 	+ updateGame() : <slot> : void \\
 	+ move(MOVES) : void \\
-    + setGames(int) : void
+    + setGames(int) : void \\
+    + resetGames() : void
 }
 
 \umlclass[x=8, y=-25]{PieceFactory}
